@@ -5,15 +5,15 @@ use IO::Socket::INET;
 use Scalar::Util 'weaken';
 use Socket qw(IPPROTO_TCP SO_ERROR TCP_NODELAY);
 
-# IPv6 support requires IO::Socket::INET6
+# IPv6 support requires IO::Socket::IP
 use constant IPV6 => $ENV{MOJO_NO_IPV6}
   ? 0
-  : eval 'use IO::Socket::INET6 2.69 (); 1';
+  : eval 'use IO::Socket::IP 0.12 (); 1';
 
 # TLS support requires IO::Socket::SSL
 use constant TLS => $ENV{MOJO_NO_TLS} ? 0
-  : eval(IPV6 ? 'use IO::Socket::SSL 1.37 (); 1'
-  : 'use IO::Socket::SSL 1.37 "inet4"; 1');
+  : eval(IPV6 ? 'use IO::Socket::SSL 1.75 (); 1'
+  : 'use IO::Socket::SSL 1.75 "inet4"; 1');
 use constant TLS_READ  => TLS ? IO::Socket::SSL::SSL_WANT_READ()  : 0;
 use constant TLS_WRITE => TLS ? IO::Socket::SSL::SSL_WANT_WRITE() : 0;
 
@@ -57,7 +57,7 @@ sub _connect {
     );
     $options{LocalAddr} = $args->{local_address} if $args->{local_address};
     $options{PeerAddr} =~ s/[\[\]]//g if $options{PeerAddr};
-    my $class = IPV6 ? 'IO::Socket::INET6' : 'IO::Socket::INET';
+    my $class = IPV6 ? 'IO::Socket::IP' : 'IO::Socket::INET';
     return $self->emit_safe(error => "Couldn't connect.")
       unless $handle = $class->new(%options);
 
@@ -76,7 +76,7 @@ sub _connect {
 
     # No TLS support
     return $self->emit_safe(
-      error => 'IO::Socket::SSL 1.37 required for TLS support.')
+      error => 'IO::Socket::SSL 1.75 required for TLS support.')
       unless TLS;
 
     # Upgrade
@@ -199,7 +199,7 @@ implements the following new ones.
   $client->connect(address => '127.0.0.1', port => 3000);
 
 Open a socket connection to a remote host. Note that TLS support depends on
-L<IO::Socket::SSL> and IPv6 support on L<IO::Socket::INET6>.
+L<IO::Socket::SSL> and IPv6 support on L<IO::Socket::IP>.
 
 These options are currently available:
 
