@@ -18,9 +18,7 @@ sub run {
 
   # IPv6
   my $ipv6
-    = Mojo::IOLoop::Server::IPV6
-    ? $IO::Socket::INET6::VERSION
-    : 'not installed';
+    = Mojo::IOLoop::Server::IPV6 ? $IO::Socket::IP::VERSION : 'not installed';
 
   # TLS
   my $tls
@@ -32,9 +30,9 @@ CORE
   Mojolicious ($Mojolicious::VERSION, $Mojolicious::CODENAME)
 
 OPTIONAL
-  EV                ($ev)
-  IO::Socket::INET6 ($ipv6)
-  IO::Socket::SSL   ($tls)
+  EV              ($ev)
+  IO::Socket::IP  ($ipv6)
+  IO::Socket::SSL ($tls)
 
 EOF
 
