@@ -3,9 +3,11 @@
   - Code name "Rainbow", this is a major release.
   - Removed Mojolicious::Plugin::I18N so it can be maintained as a separate
     distribution.
+  - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
+  - Updated IO::Socket::SSL requirement to 1.75 for IO::Socket::IP support.
+  - Switched back from IO::Socket::INET6 to IO::Socket::IP for IPv6 support.
   - Switched from HMAC-MD5 to HMAC-SHA1 for signed cookies.
   - Added support for new HTTP status code.
-  - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
   - Improved message parser performance slightly.
   - Improved documentation. (ichesnokov, sri)
   - Improved tests.
